@@ -454,7 +454,7 @@ div.frame {
 
 fieldset.frame {
 	border: 1px solid #C6D3DE;
-	padding: 10px 15px;
+	padding: 10px 10px 10px 0px;
 }
 
 legend {
