@@ -26,6 +26,8 @@
 - automatic maxlength html attribute compilation was added (reading from the attributes of the data field coming from a db), available only for text/password fields
 - P4A_Widget::setProperty(), P4A_Widget::getProperty(), P4A_Widget::unsetProperty() now turn property name to lower case
 - Bug 1616552 was solved, now anchoring invisible widgets on P4A_Frame or P4A_Fieldset does not use space on the page
+- ajax debug file is now created under P4A_COMPILE_DIR instead of session.save_path directory
+- switched 10px margin from frame/fieldset to widgets
 
 1.99.13
 - Internet Explorer 7 is now correctly detected and p4a does not include png and pure css menu hack
